# AIComicGenerator

./: .gitignore  README.md  pyproject.toml
config/: api_keys.env.example
docs/: frontend-dev-guide.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx  router.tsx
frontend/src/api/: client.ts  projects.ts  types.ts
frontend/src/components/: EmotionChart.tsx  Layout.tsx  PipelineSteps.tsx  StatusBadge.tsx
frontend/src/hooks/: usePolling.ts
frontend/src/pages/Create/: index.tsx
frontend/src/pages/Dashboard/: index.tsx
frontend/src/pages/ProjectDetail/: index.tsx
frontend/src/pages/ProjectList/: index.tsx
frontend/src/pages/Result/: index.tsx
frontend/src/stores/: projectStore.ts
src/: __init__.py  config.py  llm.py  main.py
src/api/: __init__.py  routes.py  schemas.py  task_manager.py
src/consistency/: __init__.py  character_manager.py  scene_continuity.py  style_anchor.py
src/crews/: __init__.py  asset_generation_crew.py  screenplay_crew.py  video_composition_crew.py
src/emotion/: __init__.py  curve.py  mapper.py
src/flow/: __init__.py  film_production_flow.py  state.py
src/quality/: __init__.py  evaluators.py  retry_strategy.py
src/style/: __init__.py  api_adapter.py  presets.py  prompt_engine.py
src/tools/: __init__.py  ffmpeg_tools.py  image_gen_tool.py  music_gen_tool.py  tts_tool.py  video_gen_tool.py
tests/: test_models.py
